--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,4 +36,8 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:3.9.1'
     compile 'com.zhy:okhttputils:2.6.2'
     compile 'com.alibaba:fastjson:1.1.67.android'
+    compile 'com.youth.banner:banner:1.4.10'
+    implementation 'com.github.bumptech.glide:glide:4.4.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.4.0'
+    compile 'com.zhy:magic-viewpager:1.0.1'
 }
